fixed rack's long name in DC View
Display part of name if name is too long.

--- a/src/ralph/ui/static/ui/css/data_center.less
+++ b/src/ralph/ui/static/ui/css/data_center.less
@@ -187,7 +187,8 @@
                         white-space: nowrap;
                         background: rgba(0, 0, 0, 0.8);
                         text-align: center;
-                        color:#eee;
+                        color: #eee;
+                        width: 100%;
                     }
                     .used {
                         position: absolute;
